# MateriaGranular

./: README.md
Desktop/RandomC/granularOptimizadoCopy/: CMakeLists.txt  main.cpp
